--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -21,6 +21,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
       - name: Build and push docker
         id: docker_build
         # https://github.com/docker/build-push-action
@@ -28,6 +35,7 @@ jobs:
         with:
           push: true
           tags: ghcr.io/firefly2442/bgg-inventory-nextjs:latest
+          platforms: linux/amd64,linux/arm64
           # https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md
           cache-from: type=registry,ref=ghcr.io/firefly2442/bgg-inventory-nextjs:latest
           cache-to: type=inline
