--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Download data and images
+        run: python3 main.py
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
