--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -2,6 +2,11 @@
 # https://codebeautify.org/yaml-validator
 
 on:
+  # workflow_dispatch is required in order to manually run this workflow
+  workflow_dispatch:
+  schedule:
+    # run weekly on Mondays
+    - cron: "0 13 * * 1"
   push:
     branches:
       - master
