feat: move allgames.json into it's own folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-allgames.json
+/allgames/allgames.json
 /public/thumbnails/*.png
 /public/thumbnails/*.jpg
 
@@ -31,3 +31,4 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
