--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "inventory"
   ],
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@mui/material": "5.0.0",
     "clsx": "^2.1.1",
     "next": "^15.4.2",
