--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -67,7 +67,7 @@ spec:
             {{- toYaml . | nindent 12 }}
             {{- end }}
             {{- if .Values.persistence.enabled }}
-            - name: {{ .Values.persistence.name }}
+            - name: {{ .Values.persistence.volumeName }}
               mountPath: {{ .Values.persistence.mountPath }}
             {{- end }}
             {{- if .Values.persistenceAllgames.enabled }}
