--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -79,7 +79,7 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- if .Values.persistence.enabled }}
-        - name: {{ .Values.persistence.name }}
+        - name: {{ .Values.persistence.volumeName }}
           persistentVolumeClaim:
             claimName: {{ .Values.persistence.claimName }}
         {{- end }}
