chore: update libvips

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "next": "^16.0.3",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "node-addon-api": "^8.5.0",
+    "node-gyp": "^12.1.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "npm-check-updates": "^19.1.1"
