--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "inventory"
   ],
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
-    "@emotion/cache": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "7.3.6",
     "clsx": "^2.1.1",
     "next": "^16.0.10",
-    "prop-types": "^15.8.1",
-    "react": "^19.2.2",
-    "react-dom": "^19.2.3",
     "node-addon-api": "^8.5.0",
     "node-gyp": "^12.1.0",
+    "papaparse": "^5.5.3",
+    "prop-types": "^15.8.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
